; ModuleID = '/home/carl/AnghaBench/php-src/Zend/extr_zend_stream.c_zend_stream_read.c'
source_filename = "/home/carl/AnghaBench/php-src/Zend/extr_zend_stream.c_zend_stream_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i64 (i32, i8*, i64)*, i32, i64 }

@EOF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_8__*, i8*, i64)* @zend_stream_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @zend_stream_read(%struct.TYPE_8__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_8__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 2
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %52

16:                                               ; preds = %3
  store i32 42, i32* %8, align 4
  store i64 0, i64* %9, align 8
  br label %17

17:                                               ; preds = %37, %16
  %18 = load i64, i64* %9, align 8
  %19 = load i64, i64* %7, align 8
  %20 = icmp ult i64 %18, %19
  br i1 %20, label %21, label %29

21:                                               ; preds = %17
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %23 = call i32 @zend_stream_getc(%struct.TYPE_8__* %22)
  store i32 %23, i32* %8, align 4
  %24 = load i32, i32* @EOF, align 4
  %25 = icmp ne i32 %23, %24
  br i1 %25, label %26, label %29

26:                                               ; preds = %21
  %27 = load i32, i32* %8, align 4
  %28 = icmp ne i32 %27, 10
  br label %29

29:                                               ; preds = %26, %21, %17
  %30 = phi i1 [ false, %21 ], [ false, %17 ], [ %28, %26 ]
  br i1 %30, label %31, label %40

31:                                               ; preds = %29
  %32 = load i32, i32* %8, align 4
  %33 = trunc i32 %32 to i8
  %34 = load i8*, i8** %6, align 8
  %35 = load i64, i64* %9, align 8
  %36 = getelementptr inbounds i8, i8* %34, i64 %35
  store i8 %33, i8* %36, align 1
  br label %37

37:                                               ; preds = %31
  %38 = load i64, i64* %9, align 8
  %39 = add i64 %38, 1
  store i64 %39, i64* %9, align 8
  br label %17

40:                                               ; preds = %29
  %41 = load i32, i32* %8, align 4
  %42 = icmp eq i32 %41, 10
  br i1 %42, label %43, label %50

43:                                               ; preds = %40
  %44 = load i32, i32* %8, align 4
  %45 = trunc i32 %44 to i8
  %46 = load i8*, i8** %6, align 8
  %47 = load i64, i64* %9, align 8
  %48 = add i64 %47, 1
  store i64 %48, i64* %9, align 8
  %49 = getelementptr inbounds i8, i8* %46, i64 %47
  store i8 %45, i8* %49, align 1
  br label %50

50:                                               ; preds = %43, %40
  %51 = load i64, i64* %9, align 8
  store i64 %51, i64* %4, align 8
  br label %66

52:                                               ; preds = %3
  %53 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %54 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %53, i32 0, i32 0
  %55 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %54, i32 0, i32 0
  %56 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %55, i32 0, i32 0
  %57 = load i64 (i32, i8*, i64)*, i64 (i32, i8*, i64)** %56, align 8
  %58 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %59 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %58, i32 0, i32 0
  %60 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %59, i32 0, i32 0
  %61 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %60, i32 0, i32 1
  %62 = load i32, i32* %61, align 8
  %63 = load i8*, i8** %6, align 8
  %64 = load i64, i64* %7, align 8
  %65 = call i64 %57(i32 %62, i8* %63, i64 %64)
  store i64 %65, i64* %4, align 8
  br label %66

66:                                               ; preds = %52, %50
  %67 = load i64, i64* %4, align 8
  ret i64 %67
}

declare dso_local i32 @zend_stream_getc(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
